update: 细节调整