@@ -6,7 +6,6 @@ import cn.oyzh.fx.plus.font.FontUtil;
 import cn.oyzh.i18n.I18nHelper;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * 字体类型输入框，可搜索
@@ -22,27 +21,21 @@ public class FontFamilyTextField extends SelectTextFiled<String> {
     }
 
     @Override
-    protected void onTextChanged(String newValue) {
-        if (this.skin().isTexting()) {
-            this.skin().clearTexting();
-            return;
-        }
-        if (!this.isFocused()) {
-            return;
+    protected boolean onTextChanged(String newValue) {
+        if (!super.onTextChanged(newValue)) {
+            return false;
         }
         List<String> fonts = FontUtil.getFamilies();
-        // 移除选区
-        this.skin().clearSelection();
         // 隐藏弹窗
         if (StringUtil.isBlank(newValue)) {
             this.setItemList(fonts);
             this.skin().hidePopup();
-            return;
+            return false;
         }
         // 过滤内容
         List<String> newList = fonts.stream()
                 .filter(t -> StringUtil.containsIgnoreCase(t, newValue))
-                .collect(Collectors.toList());
+                .toList();
         // 设置内容
         this.setItemList(newList);
         // 内容为空，隐藏弹窗
@@ -51,6 +44,7 @@ public class FontFamilyTextField extends SelectTextFiled<String> {
         } else {
             this.skin().showPopup();
         }
+        return true;
     }
 
     @Override
